--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>متجر إلكتروني</title>
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="متجر JavaScript يقدم أفضل المنتجات بأسعار تنافسية مع تجربة تسوق مميزة عبر الإنترنت. اكتشف الآن!">
+    <meta name="keywords" content="متجر, منتجات, JavaScript, تسوق, عروض, أفضل الأسعار">
+    <meta name="author" content="hoodaatwa">
+    
+    <!-- تحسين المشاركة عبر وسائل التواصل -->
+    <meta property="og:title" content="JavaScript Shop | تسوق المنتجات بأسعار مميزة">
+    <meta property="og:description" content="متجر JavaScript يوفر لك أفضل المنتجات بتجربة تسوق مميزة. تسوق الآن!">
+    <meta property="og:image" content="https://github.com/hoodaatwa/javascriptShop/blob/main/edited-image.png">
+    <meta property="og:url" content="https://hoodaatwa.github.io/javascriptShop/">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="JavaScript Shop | تسوق المنتجات بأسعار مميزة">
+    <meta name="twitter:description" content="متجر JavaScript يوفر لك أفضل المنتجات بتجربة تسوق مميزة. تسوق الآن!">
+    <meta name="twitter:image" content="https://github.com/hoodaatwa/javascriptShop/blob/main/edited-image.png">
+
+    <!-- تحسين هيكلة البيانات باستخدام JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "OnlineStore",
+        "name": "JavaScript Shop",
+        "description": "متجر يقدم أفضل المنتجات بأسعار تنافسية.",
+        "url": "https://hoodaatwa.github.io/javascriptShop/",
+        "logo": "https://hoodaatwa.github.io/javascriptShop/images/logo.jpg",
+        "sameAs": [
+            "https://github.com/hoodaatwa",
+            "https://www.youtube.com/channel/UCaA2v-JYyes023JIV__psCQ",
+            "https://facebook.com/43araby",
+        ],
+        "offers": {
+            "@type": "AggregateOffer",
+            "lowPrice": "1",
+            "highPrice": "500",
+            "priceCurrency": "USD"
+        }
+    }
+    </script>
+
+    <title>JavaScript Shop | متجر المنتجات</title>
+
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet rel="preconnect"">
   
   <style>
     body {
