--- a/index.html
+++ b/index.html
@@ -414,6 +414,49 @@ document.getElementById("search").addEventListener(
       cartList.classList.toggle("hidden");
     });
 
+
+
+
+import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+
+// إعداد Firebase Authentication
+const auth = getAuth();
+const provider = new GoogleAuthProvider();
+
+// تسجيل الدخول باستخدام Google
+const loginWithGoogle = async () => {
+  try {
+    await signInWithPopup(auth, provider);
+    showNotification("تم تسجيل الدخول بنجاح!", "success");
+  } catch (error) {
+    showNotification("خطأ في تسجيل الدخول", "error");
+    console.error(error);
+  }
+};
+
+// التحقق من حالة المستخدم وتحديث واجهة المستخدم
+const updateUIBasedOnAuth = (user) => {
+  const productList = document.getElementById("product-list");
+  const loginButton = document.getElementById("login-btn");
+
+  if (user) {
+    productList.classList.remove("hidden"); // إظهار المنتجات
+    loginButton.classList.add("hidden"); // إخفاء زر تسجيل الدخول
+  } else {
+    productList.classList.add("hidden"); // إخفاء المنتجات
+    loginButton.classList.remove("hidden"); // إظهار زر تسجيل الدخول
+  }
+};
+
+// مراقبة حالة تسجيل الدخول
+onAuthStateChanged(auth, (user) => {
+  updateUIBasedOnAuth(user);
+});
+
+// زر تسجيل الدخول
+const loginButton = document.getElementById("login-btn");
+loginButton.addEventListener("click", loginWithGoogle);
+
   </script>
 
 </head>
@@ -434,7 +477,17 @@ document.getElementById("search").addEventListener(
   </nav>
 
   <main class="container mx-auto mt-24 min-h-screen">
-<div id="product-list" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mx-4 mb-6"></div>
+<button
+  id="login-btn"
+  class="flex items-center justify-center gap-3 px-6 py-3 bg-white text-gray-700 border border-gray-300 shadow-md rounded-lg hover:bg-gray-100 transition duration-300 mb-4"
+>
+  <i
+    alt="Google Logo"
+    class="fa fa-google w-5 h-5"
+  ></i>
+  <span class="font-medium">Sign in with Google TO export Data</span>
+</button>
+<div id="product-list" class="hidden grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mx-4 mb-6"></div>
 <div id="product-modal" class="fixed inset-0 bg-gray-900 bg-opacity-50 flex items-center justify-center z-40 hidden">
   <div class="bg-gray-50 w-full h-full max-w-full max-h-full overflow-auto p-4 flex flex-col justify-start items-center">
     <!-- Header -->
