--- a/index.html
+++ b/index.html
@@ -479,13 +479,15 @@ loginButton.addEventListener("click", loginWithGoogle);
   <main class="container mx-auto mt-24 min-h-screen">
 <button
   id="login-btn"
-  class="flex items-center justify-center gap-3 px-6 py-3 bg-white text-gray-700 border border-gray-300 shadow-md rounded-lg hover:bg-gray-100 transition duration-300 mb-4"
->
-  <i
-    alt="Google Logo"
-    class="fa fa-google w-5 h-5"
-  ></i>
-  <span class="font-medium">Sign in with Google TO export Data</span>
+  class="flex items-center justify-center gap-3 px-6 py-3 bg-white text-gray-700 border border-gray-300 shadow-md rounded-lg hover:bg-gray-100 transition duration-300 mb-4 fixed left-1/2 transform -translate-x-1/2 top-1/2"
+>  <span class="font-medium">سجل دخولك عبر جوجل لتري منتجاتنا</span>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="48px" height="48px">
+  <path fill="#FFC107" d="M43.6 20.4h-19v7.2h11.1c-1.5 4.2-5.6 7.2-10.4 7.2-6.2 0-11.3-5-11.3-11.3s5-11.3 11.3-11.3c2.7 0 5.2 1 7.1 2.7l5.4-5.4c-3.3-2.8-7.5-4.5-12.5-4.5C14.3 4 6.7 11.7 6.7 21.3S14.3 38.7 24 38.7c10.3 0 17.7-7.1 17.7-17.7 0-1.2-.1-2.4-.3-3.6z"/>
+  <path fill="#FF3D00" d="M6.7 14.8l5.9 4.3c1.6-3.9 5.4-6.6 9.8-6.6 2.7 0 5.2 1 7.1 2.7l5.4-5.4c-3.3-2.8-7.5-4.5-12.5-4.5-7.5 0-13.8 4.3-16.7 10.5z"/>
+  <path fill="#4CAF50" d="M24 38.7c4.8 0 8.9-1.7 12-4.5l-5.7-4.6c-1.6 1.2-3.6 2-6.3 2-4.8 0-8.8-3.1-10.3-7.3l-6 4.7c2.9 6.1 9.1 10.2 16.3 10.2z"/>
+  <path fill="#1976D2" d="M43.6 20.4h-19v7.2h11.1c-1.1 2.8-3.1 5.2-5.7 6.8l5.7 4.6c3.7-3.4 6.1-8.4 6.1-14 0-1.2-.1-2.4-.2-3.6z"/>
+</svg>
+
 </button>
 <div id="product-list" class="hidden grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mx-4 mb-6"></div>
 <div id="product-modal" class="fixed inset-0 bg-gray-900 bg-opacity-50 flex items-center justify-center z-40 hidden">
