--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ loginButton.addEventListener("click", loginWithGoogle);
   <!-- Modal Content -->
   <div 
     id="modal-content" 
-    class="bg-white rounded-lg shadow-lg p-8 relative w-full h-full flex items-center justify-center"
+    class="bg-white shadow-lg p-8 relative w-full h-full flex items-center justify-center"
   >
 
     <!-- Google Login Button -->
