--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+    <meta name="google-site-verification" content="MazztROu4sDUSQZi9IHMZf3ralhBMUQr_0jDs9SyHg8" />
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="متجر JavaScript يقدم أفضل المنتجات بأسعار تنافسية مع تجربة تسوق مميزة عبر الإنترنت. اكتشف الآن!">
