--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
   const totalAmountButton = `
     <div class="mt-4 text-center">
       <button class="mb-2 me-2 inline-flex w-full items-center justify-center rounded-lg bg-blue-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-primary-300">
-        دفع المبلغ الإجمالي: ${totalPrice.toFixed(2)} جنيه
+        دفع المبلغ الإجمالي: ${totalPrice.toFixed(2)} دولار
       </button>
     </div>
   `;
